--- a/src/app/components/employees/employees.component.html
+++ b/src/app/components/employees/employees.component.html
@@ -3,7 +3,7 @@
     <input class="main" #searchBox type="text" (input)="search(searchBox.value)" placeholder="Search employee">
     <mat-icon>search</mat-icon>
     <div class="middle-space"></div>
-    <button class="main">Add employee</button>
+    <button class="main" routerLink="/employees/add">Add employee</button>
   </div>
   <table>
     <tr>
