--- a/src/styles.scss
+++ b/src/styles.scss
@@ -82,3 +82,38 @@ select.main {
   outline: none;
   cursor: pointer;
 }
+
+table.main {
+  width: 100%;
+  background: #ffffff;
+  border-collapse: collapse;
+  border: 1px solid rgba(0,0,0,.12);
+
+  tr {
+    height: 48px;
+    border-bottom: 1px solid rgba(0,0,0,.12);
+    outline: none;
+  }
+
+  tr:not(:first-child):hover {
+    background: whitesmoke;
+    cursor: pointer;
+  }
+
+  th, td {
+    padding-left: 24px;
+  }
+
+  th {
+    text-align: left;
+
+    &.sortable {
+      cursor: pointer;
+    }
+
+    div.header {
+      display: flex;
+      align-items: center;
+    }
+  }
+}
