--- a/src/app/components/employees/employees.component.scss
+++ b/src/app/components/employees/employees.component.scss
@@ -1,4 +1,4 @@
-.search {
+.action-bar {
   margin-bottom: 16px;
   display: flex;
   align-items: center;
@@ -19,40 +19,5 @@
 
   button {
     flex: 0 0 auto;
-  }
-}
-
-table {
-  width: 100%;
-  background: #ffffff;
-  border-collapse: collapse;
-  border: 1px solid rgba(0,0,0,.12);
-}
-
-tr {
-  height: 48px;
-  border-bottom: 1px solid rgba(0,0,0,.12);
-  outline: none;
-}
-
-tr:not(:first-child):hover {
-  background: whitesmoke;
-  cursor: pointer;
-}
-
-th, td {
-  padding-left: 24px;
-}
-
-th {
-  text-align: left;
-
-  &.sortable {
-    cursor: pointer;
-  }
-
-  div.header {
-    display: flex;
-    align-items: center;
   }
 }
