--- a/src/app/components/branches/branches.component.html
+++ b/src/app/components/branches/branches.component.html
@@ -1,1 +1,12 @@
-<p>branches works!</p>
+<div>
+  <table class="main">
+    <tr>
+      <th>
+        Branch
+      </th>
+    </tr>
+    <tr *ngFor="let b of branches">
+      <td>{{b}}</td>
+    </tr>
+  </table>
+</div>
