--- a/src/app/components/branches/branches.component.html
+++ b/src/app/components/branches/branches.component.html
@@ -4,9 +4,17 @@
       <th>
         Branch
       </th>
+      <th>
+        Tel.
+      </th>
+      <th>
+        Address
+      </th>
     </tr>
     <tr *ngFor="let b of branches">
-      <td>{{b}}</td>
+      <td>{{b.name}}</td>
+      <td>{{b.telNo | phone}}</td>
+      <td>{{b.address}}</td>
     </tr>
   </table>
 </div>
