--- a/src/app/components/employee-detail/employee-detail.component.scss
+++ b/src/app/components/employee-detail/employee-detail.component.scss
@@ -24,7 +24,7 @@
   display: flex;
   margin-left: 16px;
   padding-bottom: 8px;
-  height: 32px;
+  min-height: 32px;
   align-items: center;
 
   div:first-child {
