Update branch info

--- a/src/app/components/branches/branches.component.html
+++ b/src/app/components/branches/branches.component.html
@@ -2,19 +2,19 @@
   <table class="main">
     <tr>
       <th>
-        Branch
+        Branch Name
+      </th>
+      <th>
+        Tel.
       </th>
       <!-- <th>
-        Tel.
-      </th> -->
-      <th>
         Address
-      </th>
+      </th> -->
     </tr>
     <tr *ngFor="let b of branches" routerLink="/branches/{{b.id}}">
       <td><a routerLink="/branches/{{b.id}}">{{b.name}}</a></td>
-      <!-- <td>{{b.telNo | phone}}</td> -->
-      <td>{{b.address}}</td>
+      <td>{{b.telNo | phone}}</td>
+      <!-- <td>{{b.address}}</td> -->
     </tr>
   </table>
 </div>
