Semantic Elements: main, section, nav, header, thead, tbody

--- a/src/app/components/branch-detail/branch-detail.component.html
+++ b/src/app/components/branch-detail/branch-detail.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <div class="section">
+  <section>
     <div class="title">Branch Info</div>
     <!-- Name -->
     <div class="info">
@@ -23,5 +23,5 @@
         <iframe [src]="branch.map | safe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </div>
     </div>
-  </div>
+  </section>
 </div>
