--- a/src/app/components/employee-detail/employee-detail.component.html
+++ b/src/app/components/employee-detail/employee-detail.component.html
@@ -16,7 +16,7 @@
   </div>
   <div class="wrapper">
     <!-- Personal Info -->
-    <div class="section">
+    <section>
       <div class="title">Personal Info</div>
       <!-- Name -->
       <div class="info">
@@ -57,9 +57,9 @@
           </div>
         </ng-template>
       </div>
-    </div>
+    </section>
     <!-- Working Info -->
-    <div class="section">
+    <section>
       <div class="title">Working Info</div>
       <!-- Employee ID -->
       <ng-template [ngIf]="mode === 'view'">
@@ -119,6 +119,6 @@
           </div>
         </ng-template>
       </div>
-    </div>
+    </section>
   </div>
 </form>
