--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,8 @@
     <app-sidebar></app-sidebar>
   </mat-sidenav>
   <mat-sidenav-content class="sidenav-content">
-    <div class="wrapper">
+    <main class="wrapper">
       <router-outlet></router-outlet>
-    </div>
+    </main>
   </mat-sidenav-content>
 </mat-sidenav-container>
