--- a/src/app/components/branches/branches.component.html
+++ b/src/app/components/branches/branches.component.html
@@ -1,20 +1,24 @@
 <div>
   <table class="main">
-    <tr>
-      <th>
-        Branch Name
-      </th>
-      <th>
-        Tel.
-      </th>
-      <!-- <th>
-        Address
-      </th> -->
-    </tr>
-    <tr *ngFor="let b of branches" routerLink="/branches/{{b.id}}">
-      <td><a routerLink="/branches/{{b.id}}">{{b.name}}</a></td>
-      <td>{{b.telNo | phone}}</td>
-      <!-- <td>{{b.address}}</td> -->
-    </tr>
+    <thead>
+      <tr>
+        <th>
+          Branch Name
+        </th>
+        <th>
+          Tel.
+        </th>
+        <!-- <th>
+          Address
+        </th> -->
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let b of branches" routerLink="/branches/{{b.id}}">
+        <td><a routerLink="/branches/{{b.id}}">{{b.name}}</a></td>
+        <td>{{b.telNo | phone}}</td>
+        <!-- <td>{{b.address}}</td> -->
+      </tr>
+    </tbody>
   </table>
 </div>
