--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,3 +1,3 @@
-<div class="menu">
+<nav class="menu">
   <a routerLink="{{item.link}}" routerLinkActive="active" class="menu-item" *ngFor="let item of items">{{item.label}}</a>
-</div>
+</nav>
