--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,5 +1,5 @@
-<div class="toolbar">
+<header class="toolbar">
   <span>Employees Management</span>
   <span class="middle-space"></span>
   <span>Charles Darwin</span>
-</div>
+</header>
