Waiting for iframe to be loaded successfully before hide loading screen.

--- a/src/app/components/branch-detail/branch-detail.component.html
+++ b/src/app/components/branch-detail/branch-detail.component.html
@@ -20,7 +20,7 @@
     <div class="info">
       <div>Map</div>
       <div>
-        <iframe [src]="branch.map | safe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe (load)="onIFrameLoaded()" [src]="branch.map | safe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </div>
     </div>
   </section>
