--- a/src/styles.scss
+++ b/src/styles.scss
@@ -95,7 +95,7 @@ table.main {
     outline: none;
   }
 
-  tr:not(:first-child):hover {
+  tbody tr:hover {
     background: whitesmoke;
     cursor: pointer;
   }
