--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,6 +59,7 @@ input.main {
   font-size: inherit;
   font-family: inherit;
   outline: none;
+  width: 200px;
 
   &::placeholder {
     color: rgba(0,0,0,.50);
