Add branch button

--- a/src/app/components/branches/branches.component.html
+++ b/src/app/components/branches/branches.component.html
@@ -1,4 +1,8 @@
 <div>
+  <div class="action-bar">
+    <div class="middle-space"></div>
+    <button class="main" routerLink="/branches">Add branch</button>
+  </div>
   <table class="main">
     <thead>
       <tr>
